@@ -5,6 +5,7 @@ by Alex Rabe & NextGEN DEV Team
 * TODO : Adding Google Sitemaps for Images
 * TODO : Facebook connector
 * TODO : Switch to Plupload (http://www.plupload.com/)
+* NEW : Publish a new post direct from the gallery admin page
 * Changed : New hooks for gallery table (THX to Alexander Schneider)
 * Changed : Introduce jQuery dialog as new UI element
 * Bugfix : Install/Upgrade failed when table prefix contain captial letters
